# llm4pert

./: .gitignore  PLAN.md  README.md  mermaid.md  requirements.txt
LangPert/: LICENSE  README.md  pyproject.toml
LangPert/langpert/: __init__.py  cache_utils.py  perturb_dict.py  utils.py
LangPert/langpert/backends/: __init__.py  base.py  config.py  gemini.py  openai.py  transformers.py  unsloth.py
LangPert/langpert/configs/: __init__.py  config.yaml
LangPert/langpert/configs/backend/: gemini.yaml  openai.yaml  transformers.yaml  unsloth.yaml
LangPert/langpert/core/: __init__.py  model.py
LangPert/langpert/prompts/: __init__.py  loader.py  system_prompts.py  templates.py
LangPert/langpert/scripts/: __init__.py  eval_metrics.py  simple_eval.py
configs/: default.yaml  joint_k562_rpe1.yaml  large.yaml  replogle_k562.yaml  replogle_rpe1.yaml
paper/: TECHNICAL_DESIGN.md  main.tex  references.bib
paper/dygenept/: references.bib
scGenePT/: LICENSE  README.md  SECURITY.md  evaluate-perturbation.py  requirements.txt  requirements_conda.txt  train.py
scGenePT/html/: annotated.html  classes.html  classsc_gene_p_t_1_1_cls_decoder-members.html  classsc_gene_p_t_1_1_cls_decoder.html  classsc_gene_p_t_1_1_g_o_p_t_encoder-members.html  classsc_gene_p_t_1_1_g_o_p_t_encoder.html  classsc_gene_p_t_1_1_gene_encoder-members.html  classsc_gene_p_t_1_1_gene_encoder.html  classsc_gene_p_t_1_1_gene_p_t_encoder-members.html  functions.html  (+12 more)
scripts/: run_cv.sh  run_precompute.sh  run_train.sh
src/: config.py  evaluate.py  torchtext_shim.py  train.py  train_cv.py  utils.py
(+54 files in other folders)
