[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langpert"
version = "0.1.0"
description = "A minimal LLM framework for cell perturbation predictions using hybrid LLM-kNN approach"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Kaspar Märtens" }]
dependencies = [
    "google-generativeai>=0.3.0",
    "hydra-core>=1.3.2",
    "numpy>=1.20.0",
    "omegaconf>=2.3.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "tqdm>=4.0.0",
    "wandb>=0.15.0",
]

[project.optional-dependencies]
transformers = ["bitsandbytes>=0.39.0", "torch>=2.5.0", "transformers>=4.20.0"]
unsloth = ["unsloth>=2025.10"]
eval = ["pandas>=1.3.0", "perturbdict>=0.1.0"]
all = ["langpert[transformers,unsloth,eval]"]

[tool.setuptools.packages.find]
where = ["."]
include = ["langpert*"]
exclude = ["figures*"]

[tool.setuptools.package-data]
langpert = ["configs/**/*.yaml", "configs/*.yaml"]

[tool.uv.sources]
perturbdict = { git = "ssh://git@github.com/novonordisk-research/PerturbDict.git" }
